added proper description for meta tags

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,11 @@ import { HomeLinks } from "../components/HomeLinks";
 import { PageHeader } from "@/components/PageHeader";
 ---
 
-<Layout title="BobDylan's RPG MO Bobo Site" keys="rpg mo" desc="...">
+<Layout
+  title="BobDylan's RPG MO Bobo Site"
+  keys="rpg mo"
+  desc="A site dedicated to all things RGP MO."
+>
   <main class="p-4">
     <PageHeader>Useful Links for RPG MO</PageHeader>
     <HomeLinks client:load />
